Fixed GitHub link and sketches are now stretching on mobile

--- a/public/custom.css
+++ b/public/custom.css
@@ -376,6 +376,10 @@ div.sketch {
     text-align: center;
 }
 
+.sketch img {
+    max-width: 100%;
+}
+
 /*
  Side bar
  ---------------*/
